Tue Feb 06 17:47:06 2001  George Lebl <jirka@5z.com>

	* splash.c: fix further splash destroyed too early fun and fix
	  multiple exposes causing quit fun, or destroyed before expose
	  race hang fun.

Tue Feb 06 16:49:12 2001  George Lebl <jirka@5z.com>

	* card.c, dialog.c, draw.c, events.c, press_data.c, sol.c:  Make
	  sure aisleriot works even with missing or currupted installed data,
	  plus sprintf excorcism out of anality

	* splash.c: fix a crash when splash is killed prematurely by the user

	* docs/Makefile.am:  Fix makefile rule for db2html to work

2000-05-22  Ian Peters  <itp@gnu.org>

	* maze.scm: added to cvs (not distributed by default yet)

2000-05-21  Rosanna Yuen  <rosanna_yuen@yahoo.com>

	* hopscotch.scm (check-to-foundation): disallow putting cards on
	top of kings.
	* first_law.scm (button-released): removed movability of cards
	so that only clicking works.  Simplifies code and fixes seg fault.

2000-05-09  Martin Baulig  <baulig@suse.de>

	* sol.c (main): Call gnome_score_init () to fix security
	exploit to group games.

2000-04-26  Valek Filippov  <frob@df.ru>

	* menu.c: Changed jrb e-mail to jrb@redhat.com to reflect
	          the AUTHORS file. (from kanikus)

2000-04-22  Ian Peters  <itp@gnu.org>

	* sol.c: main_prog: pop the visual and colormap when we're done setting
	  stuff up, fixes black about dialog on multi-depth displays

1999-09-22  Dave Camp  <campd@oit.edu>

	* Makefile.am (INCLUDES): Use $(GUILE_INCS)

1999-08-12  Rosanna Yuen  <rwsy@mit.edu>

	* odessa.scm : fixed double clicking bug so that a) it doesn't
	crash and b)the next card flips up if necessary. 

1999-08-09  Robert Brady  <rwb197@ecs.soton.ac.uk

	* sol.c : applied Irix compiling fix from David Kaelbling 
	  <drk@sgi.com> : [bug #1781].
	
1999-08-03  Rosanna Yuen  <rwsy@mit.edu>

	* straight_up.scm (game-continuable): makes sure the game knows
	that its done.
	(button-double-clicked): fixed it so double click function doesn't