@@ -1,3 +1,9 @@
+Tue Feb 06 20:26:42 2001  George Lebl <jirka@5z.com>
+
+	* dialog.c:  close old hint dialog when new dialog is made, and
+	  use printf style strings rather then appending strings together,
+	  and lastly, free allocated memory.
+
 Tue Feb 06 17:47:06 2001  George Lebl <jirka@5z.com>
 
 	* splash.c: fix further splash destroyed too early fun and fix
